ENH: mount /nsls2/data3 in the container

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -32,6 +32,7 @@ deployments:
         network: slirp4netns
         volumes:
           - /nsls2/data/esm/proposals:/nsls2/data/esm/proposals
+          - /nsls2/data3/esm/proposals:/nsls2/data3/esm/proposals
           - /nsls2/software/etc/tiled:/nsls2/software/etc/tiled
         container_create_kwargs:
           userns_mode: "keep-id:uid=402966,gid=402966"  # workflow-esm:workflow-esm
