update to full tiled
 * the data_validation module requires functionality in full Tiled
   that is not available in tiled-client
 * note that both data_validation and metadata_exporter also require
   the data files to be available to the workflows. testing of these
   modules on hosts that do not have direct access to data files will
   not be possible

--- a/pixi.toml
+++ b/pixi.toml
@@ -6,7 +6,7 @@ platforms = ["linux-64"]
 [dependencies]
 prefect = "3.*"
 python = "<3.14"
-tiled-client = ">=0.2.3"
+tiled = ">=0.2.3"
 prefect-docker = "*"
 bluesky-tiled-plugins = ">=2"
 nexusformat = "*"
